WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97377
REGRESSION (
r129176
): Incorrect line breaking when kerning occurs between a space and the following character
https://bugs.webkit.org/show_bug.cgi?id=97377
Summary
REGRESSION (r129176): Incorrect line breaking when kerning occurs between a s...
mitz
Reported
2012-09-21 16:18:40 PDT
After <
http://trac.webkit.org/r129176
>, string measurements can be off when kerning is enabled and TextLayout is used.
Attachments
Don’t use the trailingSpaceWidth mechanism when TextLayout is used
(4.64 KB, patch)
2012-09-21 16:29 PDT
,
mitz
enrica
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2012-09-21 16:29:44 PDT
Created
attachment 165223
[details]
Don’t use the trailingSpaceWidth mechanism when TextLayout is used
Enrica Casucci
Comment 2
2012-09-21 16:55:00 PDT
Comment on
attachment 165223
[details]
Don’t use the trailingSpaceWidth mechanism when TextLayout is used Looks good to me.
mitz
Comment 3
2012-09-21 17:59:57 PDT
Fixed in <
http://trac.webkit.org/r129284
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug